@@ -1,20 +1,23 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.20'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.intellij' version '0.6.5'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
 }
 
 group 'org.easysoc'
 version pluginVersion
-
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
@@ -28,19 +31,15 @@ intellij {
 }
 
 runIde {
-    // https://confluence.jetbrains.com/display/JBR/JetBrains+Runtime
-    jbrVersion "11_0_6b840.3"
+    // https://bintray.com/jetbrains/intellij-jbr/jbrsdk11-linux-x64#files
+    jbrVersion "11_0_9b1145.21"
     ideDirectory "/home/itviewer/Downloads/software/chip"
     jvmArgs '-Didea.platform.prefix=Chip'
-    //for jbr11
-    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED','-Djdk.module.illegalAccess.silent=true'
 }
 
 patchPluginXml {
-    sinceBuild "201"
+    sinceBuild "203"
     untilBuild "203.*"
-    changeNotes """
-      remove AliRepo support.<br>"""
 }
 
 buildSearchableOptions.onlyIf { false }
